# pmia-summary-stats

./: .dockerignore  .gitignore  19disease_results.csv  ARTIFACT-APPENDIX.md  Cosine_Distance.py  Dockerfile  Electricity_Ordered.py  Electricity_Timestamp.py  GSE68951_series_matrix.txt  Histogram_Noise.py  Histogram_NoisyTimestamp.py  Histogram_Ordered.py  Histogram_Timestamp.py  L1_Distances.py  L1_noise.py  LICENSE  LLR.py  Noise.py  Ordered.py  Ordered_FitBit.py  Ordered_Noise.py  Ordered_Noise_Fitbit.py  Ordered_Timestamp.py  README.md  Timestamp_Heatmap.py  Timestamp_Noise.py  Timestamp_ROC.py  Timestamp_miRNAdiff.py  Timestamp_onemiRNAdiff.py  Timestamp_stats.py  compute_thresholds.py  debug.py  drift_analysis_findings.md  experiment_19disease.py  experiment_io.py  experiment_nsweep.py  fast_paths.py  fig_correlation_preserving.csv  fig_correlation_preserving.py  fig_drift_decomposition.csv  (+27 more)
Datasets/: Diseased_miRNAs.txt  J350694_labels.txt  J350695_labels.txt
results/: fig10a_D3_LLR_case.meta.json  fig10a_D3_LLR_case.npz  fig10b_D3_L1_case.meta.json  fig10b_D3_L1_case.npz  fig11a_D3_LLR_random.meta.json  fig11a_D3_LLR_random.npz  fig11b_D3_L1_random.meta.json  fig11b_D3_L1_random.npz  fig12b_Timestamp.meta.json  fig12b_Timestamp.npz  fig2a_D3_case.meta.json  fig2a_D3_case.npz  fig2b_D3_random.meta.json  fig2b_D3_random.npz  fig2c_Timestamp.meta.json  fig2c_Timestamp.npz  fig2d_FitBit.meta.json  fig2d_FitBit.npz  fig4_FitBit.meta.json  fig4_FitBit.npz  fig9a_D17_case.meta.json  fig9a_D17_case.npz  fig9b_D17_random.meta.json  fig9b_D17_random.npz  (+1 more)
(+4 files in other folders)
