[tool.poetry]
name = "pmia-summary-stats"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
ipython = "^8.29.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
