[project]
name = "pmia-summary-stats"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2.1.2",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "ipython>=8.29.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
